# fuga-json-seq-parser

./: Cargo.toml  README.md
data/: devices.json
examples/: parse_json_devices.rs
src/: json.rs  lib.rs
